<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/activity_calls_log_0" android:background="@color/act_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/constraintLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <ImageView android:id="@id/btn_back" android:background="@mipmap/icon_back" android:layout_width="@dimen/dp_mm_70" android:layout_height="@dimen/dp_mm_70" android:layout_marginTop="@dimen/dp_mm_60" android:layout_marginStart="@dimen/dp_mm_50" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/btnRipple" />
        <TextView android:textSize="@dimen/dp_mm_55" android:textColor="#ff333333" android:id="@id/editText" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/calls_log_title" android:layout_marginStart="@dimen/dp_mm_20" app:layout_constraintBottom_toBottomOf="@id/btn_back" app:layout_constraintEnd_toStartOf="@id/btn_delete" app:layout_constraintStart_toEndOf="@id/btn_back" app:layout_constraintTop_toTopOf="@id/btn_back" />
        <ImageView android:id="@id/btn_delete" android:background="@drawable/delete" android:layout_width="@dimen/dp_mm_60" android:layout_height="@dimen/dp_mm_60" android:layout_marginEnd="@dimen/dp_mm_50" app:layout_constraintBottom_toBottomOf="@id/btn_back" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/btn_back" style="@style/btnRipple" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/all" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/linearLayout7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dp_mm_60" android:layout_marginStart="@dimen/dp_mm_60" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
            <com.xuexiang.xui.widget.button.SmoothCheckBox android:layout_gravity="start|center" android:id="@id/scb_select" android:layout_width="@dimen/dp_mm_60" android:layout_height="@dimen/dp_mm_60" />
            <TextView android:textSize="@dimen/dp_mm_40" android:textColor="#ff333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select_all" />
        </LinearLayout>
        <TextView android:textSize="@dimen/dp_mm_55" android:textColor="#ff111111" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/choose" android:layout_marginStart="@dimen/dp_mm_60" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@id/linearLayout7" app:layout_constraintTop_toTopOf="@id/linearLayout7" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.yanzhenjie.recyclerview.SwipeRecyclerView android:id="@id/rv" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="@dimen/dp_mm_60" app:layout_constraintBottom_toTopOf="@id/btn_sure_delete" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/constraintLayout" />
    <Button android:textSize="@dimen/dp_mm_50" android:textColor="#ff555555" android:gravity="center" android:id="@id/btn_sure_delete" android:background="@color/act_bg" android:paddingTop="@dimen/dp_mm_30" android:paddingBottom="@dimen/dp_mm_30" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/delete" android:drawableTop="@drawable/delete" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/btnRipple" />
</androidx.constraintlayout.widget.ConstraintLayout>