<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/fragment_recently_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.coordinatorlayout.widget.CoordinatorLayout android:background="@color/light_gray" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.google.android.material.appbar.AppBarLayout android:orientation="vertical" android:id="@id/appbar" android:background="@color/light_gray" android:layout_width="fill_parent" android:layout_height="wrap_content" app:elevation="0.0dip">
            <com.google.android.material.appbar.CollapsingToolbarLayout android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_scrollFlags="scroll|snap">
                <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/dp_mm_100" android:textColor="#ff333333" android:gravity="center" android:id="@id/top_title" android:layout_width="fill_parent" android:layout_height="0.0dip" android:text="@string/phone" app:layout_constraintDimensionRatio="w,0.65:1" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="@dimen/dp_mm_200">
                <TextView android:textSize="@dimen/dp_mm_60" android:textColor="#ff333333" android:id="@id/label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/phone" android:layout_marginStart="@dimen/dp_mm_50" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
                <ImageView android:id="@id/imageButton" android:background="@mipmap/icon_search" android:padding="@dimen/dp_mm_10" android:layout_width="@dimen/dp_mm_80" android:layout_height="@dimen/dp_mm_80" android:layout_marginEnd="@dimen/dp_mm_30" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/btnRipple" />
                <LinearLayout android:gravity="center_vertical" android:id="@id/all" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/imageButton" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
                    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="@dimen/dp_mm_70">
                        <com.xuexiang.xui.widget.button.SmoothCheckBox android:layout_gravity="start|center" android:id="@id/scb_select" android:layout_width="@dimen/dp_mm_60" android:layout_height="@dimen/dp_mm_60" />
                        <TextView android:textSize="@dimen/dp_mm_40" android:textColor="#ff333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/select_all" />
                    </LinearLayout>
                    <TextView android:textSize="@dimen/dp_mm_55" android:textColor="#ff111111" android:id="@id/tv_choose" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/choose" android:layout_marginStart="@dimen/dp_mm_50" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.recyclerview.widget.RecyclerView android:id="@id/rv" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <Button android:textSize="@dimen/dp_mm_50" android:textColor="#ff555555" android:gravity="center" android:id="@id/btn_sure_delete" android:background="@color/act_bg" android:paddingTop="@dimen/dp_mm_30" android:paddingBottom="@dimen/dp_mm_30" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/delete" android:drawableTop="@drawable/delete" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/btnRipple" />
</androidx.constraintlayout.widget.ConstraintLayout>